Fixed: In Customer Portal no attachments are shown (bug#10586). Squashed commit of the following:
commit 92d6c810fb1fc6d7fb65ffcbf370194b5ab65e37
Author: s7design <otrs@s7designcreative.com>
Date:   Thu Jul 3 14:48:58 2014 +0200

    http://bugs.otrs.org/show_bug.cgi?id=10586

    It is fixed display long list of attachments in customer portal

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.TicketZoom.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.TicketZoom.css
@@ -384,7 +384,8 @@
 }
 
 .Details .Attachments div {
-    display: inline-block;
+    display: inline;
+    white-space: normal;
 }
 
 .Details .Attachments span {
